--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -1,157 +1,222 @@
-<% include partials/_header %>
+  <% include partials/_header %>
 
-<br>
-<br>
-<br>
+  <br>
+  <br>
+  <br>
+  <body>
 
-<!-- Hidden modal -->
-<div class="modal fade" id="submitModal" tabindex="-1" role="dialog" aria-labelledby="submitModalTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="submitModalLongTitle">Thank You, <span class="order-name"></span>!</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="order-confirmation-text">
+
+    <!-- Hidden Modal -->
+    <!-- Desc: Users see this Modal as a Thank you message-->
+    <div class="modal fade" id="submitModal" tabindex="-1" role="dialog" aria-labelledby="submitModalTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="submitModalLongTitle">Thank You, <span class="order-name"></span>!</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="order-confirmation-text">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-dark">Return Home</button>
+          </div>
         </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-dark">Return Home</button>
-      </div>
     </div>
-  </div>
-</div>
+    <!--END-->
 
-<!-- Your Cart Summary -->
-<% if (cart.length >= 1) { %>
-<div class="row mt-5 rounded text-center justify-content-center">
-<div class="col-md-6 order-md-1 mb-4">
-    <h1 class="d-flex justify-content-between align-items-center mb-3">
-      <span>Your Cart</span>
-      <% let totalQuantity = null; %>
-      <% cart.forEach( item => { %>
-      <% totalQuantity += item.quantity; %>
-      <% }) %>
-      <span class="badge badge-dark badge-pill"><%=totalQuantity%></span>
-    </h1>
-    <ul class="list-group mb-3">
-        <% cart.forEach( item => { %>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0"><%=item.name%></h6>
-              </div>
-              <div>
+
+
+    <!-- Cart Summary Section -->
+    <!--Desc: Users  will view a cart filled with selected products(meals) need to have 1 item to
+    .         to view this section / also wrapped in a loop-->
+    <% if (cart.length >= 1) { %>
+    <div class="row mt-5 rounded text-center justify-content-center">
+      <div class="col-md-6 order-md-1 mb-4">
+        <h1 class="d-flex justify-content-between align-items-center mb-3">
+         <span>Your Cart</span>
+
+         <% let totalQuantity = null; %>
+         <% cart.forEach( item => { %>
+         <% totalQuantity += item.quantity; %>
+
+         <% }) %>
+
+         <span class="badge badge-dark badge-pill"><%=totalQuantity%></span>
+        </h1>
+
+        <ul class="list-group mb-3">
+
+          <% cart.forEach( item => { %>
+
+          <li class="list-group-item d-flex justify-content-between lh-condensed">
+            <div>
+              <h6 class="my-0"><%=item.name%></h6>
+            </div>
+
+            <div>
               <h6 class="my-0">Qty: <%=item.quantity%></h6>
-              </div>
-              <div>
-              <form class="delete-item" method="POST" action="/cart/<%=item.id%>/delete">
-              <button type="submit" class="btn btn-dark btn-sm">
-                <i class="material-icons">delete</i>
-                <input type="hidden" name="cartId" value="<%=item.id%>">
-              </button>
-              </form>
-              </div>
-              <span class="text-muted">$<%=(item.price * item.quantity).toFixed(2);%></span>
-            </li>
-        <%})%>
+            </div>
 
-            <li class="list-group-item d-flex justify-content-between">
+            <div>
+              <form class="delete-item" method="POST" action="/cart/<%=item.id%>/delete">
+               <button type="submit" class="btn btn-dark btn-sm">
+                  <i class="material-icons">delete</i>
+                  <input type="hidden" name="cartId" value="<%=item.id%>">
+                </button>
+              </form>
+            </div>
+
+            <span class="text-muted">$<%=(item.price * item.quantity).toFixed(2);%></span>
+
+          </li>
+
+
+          <%})%>
+
+
+          <li class="list-group-item d-flex justify-content-between">
             <span>Taxes (CAD)</span>
+
             <% let taxes = null; %>
             <% cart.forEach( item => { %>
             <% taxes += +((item.price * item.quantity * 0.15).toFixed(2)) %>
             <% }) %>
+
             <span class="text-muted">$<%=taxes%></span>
           </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span><strong>Total (CAD)</strong></span>
-              <% let total = null; %>
-              <% cart.forEach( item => { %>
-              <% total += +(((item.price * item.quantity) + taxes).toFixed(2)); %>
-              <% }) %>
-              <strong>$<%=total%></strong>
-            </li>
-          </ul>
-</div>
-</div>
 
-<!-- Order confirmation form -->
-<div class="row mt-2 rounded text-center justify-content-center">
-<h4>Please fill out the below form to complete your order.</h4>
-<div class="col-md-6 order-md-1 mb-4">
-</div>
-<form class="order-form" action="/orders" method="POST">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <input type="text" class="form-control" id="inputFirstName" name="firstName" placeholder="First name">
-    </div>
-    <div class="form-group col-md-6">
-      <input type="text" class="form-control" id="inputLastName" name="lastName" placeholder="Last name">
-    </div>
-  </div>
-  <div class="form-row">
-  <div class="form-group col-md-2">
-    <label for="inputAddress">Street Number</label>
-    <input type="text" class="form-control" id="inputAddress" name="streetNumber">
-  </div>
-  <div class="form-group col-md-6">
-    <label for="inputAddress2">Street Name</label>
-    <input type="text" class="form-control" id="inputAddress2" name="streetName">
-  </div>
-  <div class="form-group col-md-4">
-  <label for="inputPhoneNumber">Phone Number</label>
-  <input type="text" class="form-control" id="inputPhoneNumber" name="phoneNumber" placeholder="(XXX)-XXX-XXXX">
-</div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" name="city" id="inputCity">
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputProvince">Province</label>
-      <select id="inputProvince" name="province" class="form-control">
-        <option selected>Choose...</option>
-        <option>Alberta</option>
-        <option>British Columbia</option>
-        <option>Manitoba</option>
-        <option>New Bruinswick</option>
-        <option>Newfoundland</option>
-        <option>Nova Scotia</option>
-        <option>Ontario</option>
-        <option>Prince Edward Island</option>
-        <option>Quebec</option>
-        <option>Saskatchewan</option>
-      </select>
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputPostal">Postal Code</label>
-      <input type="text" class="form-control" name="postalCode" id="inputPostal">
+          <li class="list-group-item d-flex justify-content-between">
+            <span><strong>Total (CAD)</strong></span>
+
+            <% let total = null; %>
+            <% cart.forEach( item => { %>
+            <% total += +(((item.price * item.quantity) + taxes).toFixed(2)); %>
+            <% }) %>
+
+            <strong>$<%=total%></strong>
+          </li>
+
+        </ul>
+
       </div>
-      </div>
-      <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">Submit Order</button>
-      </div>
-  </form>
-
-
-
-
-  <!-- Shows the user an empty cart if they have not selected anything from the menu. -->
-  <% } else { %>
-
-<div class="card shadow border-0 h-100 card-img-top">
-    <div class="card-body">
-      <img src="https://wavenetdelivery.ordering.co/templates/web/img/empty-cart.png" alt="Card image cap">
-      <h5 class="card-title">Your cart is empty!</h5>
-      <p class="card-text">Please add some delicious burgers from our menu page!</p>
-      <a href="/dishes" class="btn btn-dark">Menu</a>
     </div>
-  </div>
-  <% } %>
+    <!--END-->
+
+      <!-- Old Version! (refer to  Below Templete "Empty Cart")
+      <div class="row" id="ads">
+        <!-- Category Card -->
+        <!--<div class="col-md-4">
+          <div class="card rounded">
+            <div class="card-image">
+              <img src="https://wavenetdelivery.ordering.co/templates/web/img/empty-cart.png" alt="Card image cap">
+              <h5 class="card-title">Your cart is empty!</h5>
+              <a href="/dishes" class="btn btn-dark">Menu</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <!-- Within Cart Summary - Order confirmation form -->
+    <div class="row mt-2 rounded text-center justify-content-center">
+      <h4>Please fill out the below form to complete your order.</h4>
+      <div class="col-md-6 order-md-1 mb-4"></div>
+
+      <form class="order-form" action="/orders" method="POST">
+        <div class="form-row">
+
+          <div class="form-group col-md-6">
+            <input type="text" class="form-control" id="inputFirstName" name="firstName" placeholder="First name">
+          </div>
+
+          <div class="form-group col-md-6">
+            <input type="text" class="form-control" id="inputLastName" name="lastName" placeholder="Last name">
+          </div>
+
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-2">
+            <label for="inputAddress">Street Number</label>
+            <input type="text" class="form-control" id="inputAddress" name="streetNumber">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="inputAddress2">Street Name</label>
+            <input type="text" class="form-control" id="inputAddress2" name="streetName">
+          </div>
+
+          <div class="form-group col-md-4">
+            <label for="inputPhoneNumber">Phone Number</label>
+            <input type="text" class="form-control" id="inputPhoneNumber" name="phoneNumber" placeholder="(XXX)-XXX-XXXX">
+          </div>
+        </div>
+
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputCity">City</label>
+            <input type="text" class="form-control" name="city" id="inputCity">
+          </div>
+
+          <div class="form-group col-md-4">
+            <label for="inputProvince">Province</label>
+            <select id="inputProvince" name="province" class="form-control">
+              <option selected>Choose...</option>
+              <option>Alberta</option>
+              <option>British Columbia</option>
+              <option>Manitoba</option>
+              <option>New Bruinswick</option>
+              <option>Newfoundland</option>
+              <option>Nova Scotia</option>
+              <option>Ontario</option>
+              <option>Prince Edward Island</option>
+              <option>Quebec</option>
+              <option>Saskatchewan</option>
+            </select>
+          </div>
+
+          <div class="form-group col-md-2">
+            <label for="inputPostal">Postal Code</label>
+            <input type="text" class="form-control" name="postalCode" id="inputPostal">
+          </div>
+
+          </div>
+            <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">Submit Order</button>
+          </div>
+        </div>
+      </form>
+
+      <% } else { %>
+
+      <!-- Users are shown our empty cart if they have not selected any burgers from the menu. -->
+
+
+      <!-- Empty Cart - Card Template -->
+      <div class="margin-emepty-cart">
+        <div class="col-md-4 offset-md-4 text-center">
+          <div class="card mb-4 text-white bg-dark">
+            <img class="card-img-top" src="https://wavenetdelivery.ordering.co/templates/web/img/empty-cart.png" alt="Card image cap">
+            <div class="card-body ">
+              <h5 class="card-title">Your cart is empty!</h5>
+              <a href="/dishes" class="btn btn-outline-light btn-sm">Menu</a>
+              <a href="/" class="btn btn-outline-light btn-sm">Return to Homepage</a> <!-- make sure the href is working on this route-->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <% } %>
+
+    </div>
+    <!--END-->
+
+
+  </body>
   <%include partials/_footer%>
 </html>
-
