footer cleaned/ with social logos

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,6 +1,6 @@
 <!-- Footer-->
 <div class="py-4 bg-dark">
-  <div class="container">
+  <div class="container position:fixed; mb-5">
     <div class="row justify-content-space-between">
       <div class="col-lg-4 mb-4 mb-lg-0">
       <h5 class="text-white">Contact Us</h5>
