--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,7 +18,7 @@
 
   <header>
 
-    <!-- navbar-->
+    <!-- Navbar -->
     <nav class="navbar navbar-light navbar-expand-lg fixed-top shadow-sm bg-white"><a href="/" class="navbar-brand"><img class="brandlogo"src="https://tbncdn.freelogodesign.org/164afac9-8074-45e9-8dd6-1ebf2bef310b.png?1554054772826" alt="brand logo"></a> <!-- IF CX CLICK ON LOGO TAKES THEM TO HOMEPAGE-->
       <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
       <div id="navbarSupportedContent" class="collapse navbar-collapse">
