Edited top of main page.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,7 @@
     <!-- DO WELCOME sign-->
 
     <section class="bg-dark" style="width:auto; height:100px">
-      <div class="text-center bg-dark">
-        <h2 class="mt-4 text-white" style="height:10p">Reviews</h2>
-      </div>
+    <h1 class="m-4 mb-4 text-center display-2 text-white">Welcome to DM Burgers!</h1>
     </section
 
 
