correct welcome bar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,10 @@
   <body>
 
 
-    <!-- DO WELCOME sign-->
-
-    <section class="bg-dark" style="width:auto; height:100px">
-    <h1 class="m-4 mb-4 text-center display-2 text-white">Welcome to DM Burgers!</h1>
-    </section
+    <!-- WELCOME Bar -->
+    <div class="bg-dark" style="width:auto; height:100px">
+      <h1 class="m-4 mb-4 text-center display-2 text-white">Welcome to DM Burgers!</h1>
+    </div>
 
 
     <!-- Carousel Layout Section -->
@@ -88,7 +87,7 @@
     <!-- User Reviews Section -->
     <!-- Desc: Team Template Theme used for the reviews.-->
     <section class="mt">
-      <div class="text-center bg-dark">
+      <div class="mt-4 text-center bg-dark">
         <h2 class="mt-4 text-white">Reviews</h2>
 
         <div class="row mt-4">
