Added link to modal to return home

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -23,7 +23,9 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+            <a href="/">
             <button type="button" class="btn btn-dark">Return Home</button>
+            </a>
           </div>
         </div>
       </div>
