--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -158,6 +158,7 @@
       </div>
       </div>
     </div>
+    <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">Submit Order</button>
     </form>
     <!--END-->
 
